--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "crypto-js": "^4.1.1",
     "daisyui": "^2.46.0",
+    "firebase": "^9.18.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
